# GraphicsProject

./: .gitignore  CMakeLists.txt
Assets/: terrain.txt
Assets/Models/tree/: pine.mtl
Assets/Textures/: heightmap.raw
Shaders/: grass.frag  grass.geo  grass.vert  grassM.vert  mesh.frag  mesh.vert  model.frag  model.vert
src/: Bitmap.h  Camera.h  Grid.cpp  Grid.h  Input.cpp  Input.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.h  TextureLoader.h  Time.cpp  Time.h
src/Math/: mat.h  vec.h
